change /uploads to /assets
minor change in the code to have a different folder name for imagery and documents

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <div class="col">
                     <div class="card p-2 rounded h-100">
                         <div class="d-flex align-items-center">
-                            <img class="" src="uploads/Icon-vtolcargo.svg" style="width: 40px; height: 40px;" alt="" /> 
+                            <img class="" src="assets/Icon-vtolcargo.svg" style="width: 40px; height: 40px;" alt="" /> 
                             <div class="flex-grow-1 text-end">
                                 <span class="tag">
                                     Private + rideshare
@@ -568,7 +568,7 @@
      <div class="container py-1 cta-area rounded text-light bg-image">
         <div class="row">
             <div class="col-6 contact-img">
-                <img class="img-fluid" src="uploads/Untitled-2.png" alt="contact image" />
+                <img class="img-fluid" src="assets/Untitled-2.png" alt="contact image" />
             </div>
             <div class="col-6 py-5 mb-5">
                 <h3> Plan a conversation with us</h3>
